--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Flora Lin</title>
   </head>
+  <nav>
+    <header>
+      flora lin
+    </header>
+    <ul>
+      <li>work</li>
+      <li>about</li>
+      <li>fun</li>
+      <a href="https://bit.ly/2RxcBiT"><li>resume</li></a>
+    </ul>
+  </nav>
   <body>
 
   </body>
