--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </header>
     <ul>
       <li>work</li>
-      <li>about</li>
-      <li>fun</li>
+      <a href="about.html"> <li>about</li> </a>
+      <a href="fun.html"> <li>fun</li> </a>
       <a href="https://bit.ly/2RxcBiT"><li>resume</li></a>
     </ul>
   </nav>
