--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Flora Lin</title>
+    <link rel="stylesheet" href="./styles.scss">
   </head>
   <nav>
     <header>
