--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Flora Lin</title>
-    <link rel="stylesheet" href="./styles.scss">
-  </head>
-  <nav>
-    <header>
-      flora lin
-    </header>
-    <ul>
-      <li>work</li>
-      <a href="about.html"> <li>about</li> </a>
-      <a href="fun.html"> <li>fun</li> </a>
-      <a href="https://bit.ly/2RxcBiT"><li>resume</li></a>
-    </ul>
-  </nav>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Flora Lin</title>
+  <link rel="stylesheet" href="./styles.scss">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap" rel="stylesheet">
+</head>
+<nav>
+  <header>
+    flora lin
+  </header>
+  <ul>
+    <li>work</li>
+    <a href="about.html"> <li>about</li> </a>
+    <a href="fun.html"> <li>fun</li> </a>
+    <a href="https://bit.ly/2RxcBiT"><li>resume</li></a>
+  </ul>
+</nav>
+<body>
 
-  </body>
+</body>
 </html>
