--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </header>
     <ul>
       <li>work</li>
-      <a href="about.html"> <li>about</li> </a>
-      <a href="fun.html"> <li>fun</li> </a>
-      <a href="https://bit.ly/2RxcBiT"><li>resume</li></a>
+      <li><a href="about.html">about</a></li>
+      <li><a href="fun.html">fun</a></li>
+      <li><a href="https://bit.ly/2RxcBiT">resume</a></li>
     </ul>
   </nav>
 
