--- a/index.html
+++ b/index.html
@@ -3,22 +3,86 @@
 <head>
   <meta charset="utf-8">
   <title>Flora Lin</title>
+
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav>
-    <header>
-      flora lin
-    </header>
-    <ul>
-      <li>work</li>
+    <ul class="navleft">
+      <li class="namelink"><a href="index.html">flora lin</a></li>
+    </ul>
+    <ul class="navright">
+      <li><a href="index.html">work</a></li>
       <li><a href="about.html">about</a></li>
       <li><a href="fun.html">fun</a></li>
       <li><a href="https://bit.ly/2RxcBiT">resume</a></li>
     </ul>
   </nav>
+  <section>
+    <p>Hi! I'm Flora, a product designer and web developer based in Toronto and
+      Kingston, ON. Currently studying cognitive science at
+      <a target="_blank" href="queensu.ca">Queen's University</a></p>
+      <p>Selected Works</p>
+    </section>
+    <section class="projects">
+      <div class="wewalk project-card">
+        <div class="project-brief">
+          <p class="subheading">Designathon Challenge, UX Design</p>
+          <h1 class="project-title">WeWalk</h1>
+          <p class="project-description">Providing community support for the
+            Asian community in light of surge in hate crimes.</p>
+            <a href="wewalk.html"><button type="button" class="view-project">View Project </button></a>
+          </div>
+          <img src="" alt="WeWalk Project Card">
+        </div>
 
-</body>
-</html>
+        <div class="inQUbate project-card">
+          <div class="project-brief">
+            <p class="subheading">Student Organization</p>
+            <h1 class="project-title">inQUbate</h1>
+            <p class="project-description">Building a brand for Canada's first
+              student-run AI incubator.</p>
+            <a href="inqubate.html"><button type="button" class="view-project">View Project </button></a>
+          </div>
+          <img src="" alt="inQUbate Project Card">
+        </div>
+
+        <div class="Hack The 6ix project-card">
+          <div class="project-brief">
+            <p class="subheading">Student Organization</p>
+            <h1 class="project-title">Hack The 6ix</h1>
+            <p class="project-description">Designing the largest summer student-run,
+              not-for-profit hackathon based in Toronto. </p>
+            <a href="hackthe6ix.html"><button type="button" class="view-project">View Project </button></a>
+          </div>
+          <img src="" alt="Hack The 6ix Project Card">
+        </div>
+
+        <div class="Coffee Clock project-card">
+          <div class="project-brief">
+            <p class="subheading">Human-Computer Interaction Project</p>
+            <h1 class="project-title">Coffee Clock</h1>
+            <p class="project-description">Visualizing caffeine consumption to
+              encourage healthier sleep habits.</p>
+            <a href="coffeeclock.html"><button type="button" class="view-project">View Project </button></a>
+          </div>
+          <img src="" alt="Hack The 6ix Project Card">
+        </div>
+      </section>
+
+      <footer>
+        <h2>Let's Connect</h2>
+        <p>Feel free to reach out at <a href="mailto:flora.lin@queensu.ca">
+          flora.lin@queensu.ca</a> and stay connected with me.
+          I'm always down for a coffee and a nice chat!</p>
+        <div class="connect-links">
+          <a href="mailto:flora.lin@queensu.ca"></a>
+          <a href="https://bit.ly/2RxcBiT">Resume</a>
+          <a href="linkedin.com/in/flora-l/">LinkedIn</a>
+        </div>
+
+        </footer>
+      </body>
+      </html>
