--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
       <li><a href="https://bit.ly/2RxcBiT">resume</a></li>
     </ul>
   </nav>
-  <section>
+  <!-- desciption -->
+  <section class="description">
     <p>Hi! I'm Flora, a product designer and web developer based in Toronto and
       Kingston, ON. Currently studying cognitive science at
       <a target="_blank" href="queensu.ca">Queen's University</a></p>
       <p>Selected Works</p>
     </section>
+    <!-- project -->
     <section class="projects">
+
+      <!-- WeWalk -->
       <div class="wewalk project-card">
         <div class="project-brief">
           <p class="subheading">Designathon Challenge, UX Design</p>
@@ -38,6 +42,7 @@
           <img src="" alt="WeWalk Project Card">
         </div>
 
+        <!-- inQUbate -->
         <div class="inQUbate project-card">
           <div class="project-brief">
             <p class="subheading">Student Organization</p>
@@ -49,6 +54,7 @@
           <img src="" alt="inQUbate Project Card">
         </div>
 
+        <!-- HT6 -->
         <div class="Hack The 6ix project-card">
           <div class="project-brief">
             <p class="subheading">Student Organization</p>
@@ -60,13 +66,14 @@
           <img src="" alt="Hack The 6ix Project Card">
         </div>
 
+        <!-- Coffee Clock -->
         <div class="Coffee Clock project-card">
           <div class="project-brief">
             <p class="subheading">Human-Computer Interaction Project</p>
             <h1 class="project-title">Coffee Clock</h1>
             <p class="project-description">Visualizing caffeine consumption to
               encourage healthier sleep habits.</p>
-            <a href="coffeeclock.html"><button type="button" class="view-project">View Project </button></a>
+            <a href="coffeeclock.html"><button type="button" disabled class="view-project" id="coffeeclock-btn">Coming Soon!</button></a>
           </div>
           <img src="" alt="Hack The 6ix Project Card">
         </div>
